src/snapshots/cargo_semver_checks__query__tests__constructible_struct_adds_private_field.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/constructible_struct_adds_field/": [
        {
            "field_name": String("new_field"),
            "path": List([
                String("constructible_struct_adds_field"),
                String("PlainStructGainsPrivateField"),
            ]),
            "span_begin_line": Uint64(42),
            "span_filename": String("src/lib.rs"),
            "struct_name": String("PlainStructGainsPrivateField"),
            "struct_type": String("plain"),
        },
        {
            "field_name": String("2"),
            "path": List([
                String("constructible_struct_adds_field"),
                String("TupleStructGainsPrivateField"),
            ]),
            "span_begin_line": Uint64(47),
            "span_filename": String("src/lib.rs"),
            "struct_name": String("TupleStructGainsPrivateField"),
            "struct_type": String("tuple"),
        },
    ],
    "./test_crates/constructible_struct_adds_private_field/": [
        {
            "field_name": String("new_field"),
            "path": List([
                String("constructible_struct_adds_private_field"),
                String("ExhaustiveEmptyPlainStruct"),
            ]),
            "span_begin_line": Uint64(2),
            "span_filename": String("src/lib.rs"),
            "struct_name": String("ExhaustiveEmptyPlainStruct"),
            "struct_type": String("plain"),
        },
        {
            "field_name": String("new_field"),
            "path": List([
                String("constructible_struct_adds_private_field"),
                String("ExhaustivePlainStruct"),
            ]),
            "span_begin_line": Uint64(8),
            "span_filename": String("src/lib.rs"),
            "struct_name": String("ExhaustivePlainStruct"),
            "struct_type": String("plain"),
        },
        {
            "field_name": String("0"),
            "path": List([
                String("constructible_struct_adds_private_field"),
                String("ExhaustiveEmptyTupleStruct"),
            ]),
            "span_begin_line": Uint64(11),
            "span_filename": String("src/lib.rs"),
            "struct_name": String("ExhaustiveEmptyTupleStruct"),
            "struct_type": String("tuple"),
        },
        {
            "field_name": String("2"),
            "path": List([
                String("constructible_struct_adds_private_field"),
                String("ExhaustiveTupleStruct"),
            ]),
            "span_begin_line": Uint64(13),
            "span_filename": String("src/lib.rs"),
            "struct_name": String("ExhaustiveTupleStruct"),
            "struct_type": String("tuple"),
        },
    ],
}
