src/snapshots/cargo_semver_checks__query__tests__constructible_struct_changed_type.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/struct_becomes_enum/": [
        {
            "current_typename": String("Enum"),
            "name": String("ConstructibleFieldlessUnit"),
            "path": List([
                String("struct_becomes_enum"),
                String("ConstructibleFieldlessUnit"),
            ]),
            "span_begin_line": Uint64(29),
            "span_filename": String("src/lib.rs"),
            "struct_type": String("unit"),
            "struct_typename": String("Struct"),
            "visibility_limit": String("public"),
        },
        {
            "current_typename": String("Enum"),
            "name": String("ConstructibleFieldlessTuple"),
            "path": List([
                String("struct_becomes_enum"),
                String("ConstructibleFieldlessTuple"),
            ]),
            "span_begin_line": Uint64(31),
            "span_filename": String("src/lib.rs"),
            "struct_type": String("tuple"),
            "struct_typename": String("Struct"),
            "visibility_limit": String("public"),
        },
        {
            "current_typename": String("Enum"),
            "name": String("ConstructibleFieldlessStruct"),
            "path": List([
                String("struct_becomes_enum"),
                String("ConstructibleFieldlessStruct"),
            ]),
            "span_begin_line": Uint64(35),
            "span_filename": String("src/lib.rs"),
            "struct_type": String("plain"),
            "struct_typename": String("Struct"),
            "visibility_limit": String("public"),
        },
    ],
}
