src/snapshots/cargo_semver_checks__query__tests__enum_marked_non_exhaustive.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/non_exhaustive/": [
        {
            "name": String("SimpleEnum"),
            "path": List([
                String("non_exhaustive"),
                String("SimpleEnum"),
            ]),
            "span_begin_line": Uint64(48),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
}
